amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.1.1:
  FIX: GStreamer-engine refused to play some mp3 files. (BR 90317)

VERSION 1.1:
  FIX: Huge speedup for Context-Browser, makes changing tracks faster.
  ADD: Progress display for Cover-Manager.
  CHG: Systray animation is now optional.
  CHG: Updated included sqlite to 3.0.7 (stable).
  ADD: Tag editor can operate on multiple files (mass tagging).
  FIX: Collection encoding broken for non-latin1 characters. (BR 89747)
  ADD: Popup-menu for cover images in Context-Browser.
  FIX: The first track to play is now random for random-mode. (BR 77055)
  FIX: Show systray on startup. (BR 89661)
  FIX: Let xine recognise tracks that have non lower-case extensions.

VERSION 1.1-beta2:
  ADD: K3B integration for burning CDs. (BR 88052)
  ADD: Third category for Collection-Browser. (BR 83609)
  ADD: Playlist search now supports categories. (BR 86296)
  ADD: Support for MAS (Media Application Server). MAS-engine
       is in experimental state.
  ADD: Context-Browser shows information about radio streams.
  ADD: Custom Smart Playlists with built-in editor.
  ADD: Systray icon shows track progress and play status.
  CHG: Imported SQLite3 and ported CollectionDB.
  ADD: "Cool-Streams", a list of amaroK Squad recommended streams for
       playlist-browser.
  ADD: Detecting Sampler/VA discs in CollectionBrowser (shown as
       "Various Artists"). (BR 81683)
  ADD: Configuration GUI for xine-engine.
  ADD: Next and previous track buttons for Tag-Editor.
  ADD: Player-window adapts to current color scheme.
  ADD: Crossfading and fade-in/out function for GStreamer-Engine.
  ADD: Genre and Favorite Tracks by Artist smart playlist in the
       Playlist-Browser.
  ADD: IMMS-like rating system for songs.
  FIX: aRts-engine has been ported to the new engine interface and is
       available again (but not recommended).
  FIX: Try to autodetect Sampler-Discs and show them properly in the